plugins {
    id 'org.jetbrains.grammarkit' version '2021.1.3'
    id 'org.jetbrains.intellij' version '1.1.3'
    id 'com.github.ManifestClasspath' version '0.1.0-RELEASE'
    id 'org.jetbrains.changelog' version '1.2.0'
}

apply plugin: 'org.jetbrains.grammarkit'
apply plugin: 'java'
apply plugin: 'org.jetbrains.changelog'

group 'com.tobszarny.intellij.plugin'
version pluginVersion

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = platformVersion
    updateSinceUntilBuild = false
    plugins = ['IntelliLang', 'java']
    ideaDependencyCachePath = project.buildDir.absolutePath
}

patchPluginXml {
    changeNotes = """
            <p><h2>New in $pluginVersion</h2></p>
            <p>
            ${changelog.get(pluginVersion.toString()).toHTML()}
            </p>
            <br />
            <p>See the <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/blob/master//CHANGELOG.md">CHANGELOG</a> for more details and history.</p>
        """.stripIndent()
}

buildSearchableOptions {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

runPluginVerifier {
    ideVersions = ['IU-2021.1', 'IU-2021.2']
}

test {
    useJUnitPlatform()
}
